// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`free unused presets after program Update works as planned:  before aanything  1`] = `
Object {
  "lists": Object {
    "list.presetModel": Object {
      "limit": 5,
      "result": Array [
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 0,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 1,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 2,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 3,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 4,
          "project": "-",
        },
      ],
      "skip": 0,
      "total": 100,
    },
  },
}
`;

exports[`free unused presets after program Update works as planned: after 2 having been freed up again 1`] = `
Object {
  "lists": Object {
    "list.presetModel": Object {
      "limit": 5,
      "result": Array [
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 0,
          "project": "b19999999999999999999999",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 1,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 2,
          "project": "-",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 3,
          "project": "b19999999999999999999999",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 4,
          "project": "-",
        },
      ],
      "skip": 0,
      "total": 100,
    },
  },
}
`;

exports[`free unused presets after program Update works as planned: after reservation of four presets 1`] = `
Object {
  "lists": Object {
    "list.presetModel": Object {
      "limit": 5,
      "result": Array [
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb098765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 0,
          "project": "b19999999999999999999999",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb198765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 1,
          "project": "b19999999999999999999999",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb298765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 2,
          "project": "b19999999999999999999999",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb398765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 3,
          "project": "b19999999999999999999999",
        },
        Object {
          "_id": "c1bbbbbbbbbbbbbbbb498765",
          "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
          "number": 4,
          "project": "-",
        },
      ],
      "skip": 0,
      "total": 100,
    },
  },
}
`;
